# Clippy

./: .gitignore  README.md  generate-icons-canvas.mjs  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon-44x44.rgba
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/input/: keyboard.rs  mouse.rs
src-tauri/src/process/: watcher.rs
src/components/: ClippyCanvas.tsx  ContextMenu.tsx  FixedNote.tsx  PomodoroWidget.tsx  ReminderToast.tsx  SettingsPanel.tsx  SpeechBubble.tsx  StretchOverlay.tsx
src/config/: defaults.ts  speechLines.ts
src/engine/: ClippyRenderer.ts  ParticleSystem.ts
src/engine/characters/: cactus.ts  cat.ts  clippy-dark.ts  clippy-gold.ts  clippy-neon.ts  clippy.ts  coffee.ts  dice.ts  dog.ts  fox.ts  ghost.ts  index.ts  lightbulb.ts  mushroom.ts  octopus.ts  owl.ts  parrot.ts  penguin.ts  robot.ts  rubber-duck.ts  ufo.ts  utils.ts
src/hooks/: useAIStatus.ts  useClippy.ts  useConfig.ts  useInput.ts  useInteractiveRegions.ts  useTimers.ts
src/systems/: AIStatusSystem.ts  IdleBehavior.ts  SoundSystem.ts
src/utils/: math.ts
