[package]
name = "desktop-clippy"
version = "0.1.0"
description = "Desktop Clippy - A desktop pet overlay"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_clippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = { version = "7", features = ["macos_kqueue"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
